--- a/src/App.css
+++ b/src/App.css
@@ -20,5 +20,13 @@ input[type='email'] {
   background-color: #fff;
   border: 1px solid #ccc;
   border-radius: 4px;
+  /* margin-bottom: 20px; */
+}
+
+.form-control {
   margin-bottom: 20px;
+}
+
+.error {
+  color: red;
 }
